@@ -92,6 +92,7 @@ public:
 
     static void setIconDatabaseEnabled(bool enabled, const QString &location = QString());
     static bool iconDatabaseEnabled();
+    static QPixmap iconForUrl(const QUrl &url);
 
     static void setWebGraphic(WebGraphic type, const QPixmap &graphic);
     static QPixmap webGraphic(WebGraphic type);
